# Power-line-Maintenance-Problem

./: .gitignore  CMakeLists.txt  FindGUROBI.cmake  LICENSE  README.md  all.csv  run_exps.py  run_plots.py  run_real_exps.py  run_real_plots.py  test.sh
code/: CMakeLists.txt
code/input/: test.cfg  testBiagini.cfg
code/src/: algorithms.cpp  algorithms.h  definitions.h  deployment.cpp  deployment.h  input.cpp  input.h
code_TOFIX/: agg_s10_p25.csv  agg_s10_p25_b10000.csv  agg_s10_p25_b5000.csv  agg_s10_p50.csv  agg_s10_p50_b10000.csv  agg_s10_p50_b5000.csv  agg_s10_p75.csv  agg_s10_p75_b10000.csv  agg_s10_p75_b5000.csv  agg_s20.csv  agg_s20_p25.csv  agg_s20_p25_b10000.csv  agg_s20_p25_b5000.csv  agg_s20_p50.csv  agg_s20_p50_b10000.csv  agg_s20_p50_b5000.csv  agg_s20_p75_b10000.csv  agg_s20_p75_b5000.csv  aggreagati1.csv  aggreagati3.csv  aggreagati5.csv  aggregatore.py  aggregatore1.py  bar_plot.tex  bar_plot2.tex  graph_make.py  graph_make1.py  intervallaccio.txt  knapsack.py  knapsack2.py  knapsack_daricordare.py  main.py  model.py  multiline.py  opt_CPLEX.py  opt_agg.py  opt_ilp.py  plot_ratio.tex  random_input.py  random_paths_tests_drone1.csv  (+44 more)
input/: test.cfg
literature/: readme.txt
output/: azz3.csv  azz4.csv  out_alg0_ndel100_maxw1_load10_batt2500.csv  out_alg0_ndel100_maxw1_load10_batt5000.csv  out_alg0_ndel100_maxw1_load5_batt2500.csv  out_alg0_ndel100_maxw1_load5_batt5000.csv  out_alg0_ndel100_maxw5_load10_batt2500.csv  out_alg0_ndel100_maxw5_load10_batt5000.csv  out_alg0_ndel100_maxw5_load5_batt2500.csv  out_alg0_ndel100_maxw5_load5_batt5000.csv  out_alg0_ndel10_maxw1_load10_batt2500.csv  out_alg0_ndel10_maxw1_load10_batt5000.csv  out_alg0_ndel10_maxw1_load5_batt2500.csv  out_alg0_ndel10_maxw1_load5_batt5000.csv  out_alg0_ndel10_maxw5_load10_batt2500.csv  out_alg0_ndel10_maxw5_load10_batt5000.csv  out_alg0_ndel10_maxw5_load5_batt2500.csv  out_alg0_ndel10_maxw5_load5_batt5000.csv  out_alg0_ndel150_maxw1_load10_batt2500.csv  out_alg0_ndel150_maxw1_load5_batt2500.csv  out_alg0_ndel150_maxw1_load5_batt5000.csv  out_alg0_ndel150_maxw5_load10_batt2500.csv  out_alg0_ndel150_maxw5_load5_batt2500.csv  out_alg0_ndel15_maxw1_load10_batt2500.csv  out_alg0_ndel15_maxw1_load10_batt5000.csv  out_alg0_ndel15_maxw1_load5_batt2500.csv  out_alg0_ndel15_maxw1_load5_batt5000.csv  out_alg0_ndel15_maxw5_load10_batt2500.csv  out_alg0_ndel15_maxw5_load10_batt5000.csv  out_alg0_ndel15_maxw5_load5_batt2500.csv  out_alg0_ndel15_maxw5_load5_batt5000.csv  out_alg0_ndel20_maxw1_load10_batt2500.csv  out_alg0_ndel20_maxw1_load10_batt5000.csv  out_alg0_ndel20_maxw1_load5_batt2500.csv  out_alg0_ndel20_maxw1_load5_batt5000.csv  out_alg0_ndel20_maxw5_load10_batt2500.csv  out_alg0_ndel20_maxw5_load10_batt5000.csv  out_alg0_ndel20_maxw5_load5_batt2500.csv  out_alg0_ndel20_maxw5_load5_batt5000.csv  out_alg0_ndel30_maxw1_load10_batt2500.csv  (+7366 more)
plots/: all.csv  tmp-a_dp_alg0_load10_batt2500_maxint2_delta0.5.csv  tmp-a_dp_alg0_load10_batt2500_maxint2_delta0.5_zipf0.csv  tmp-a_dp_alg0_load10_batt2500_maxint2_delta0.5_zipf1.csv  tmp-a_dp_alg0_load10_batt2500_maxint2_delta0.5_zipf2.csv  tmp-a_dp_alg0_load10_batt2500_maxint2_delta1.0.csv  tmp-a_dp_alg0_load10_batt2500_maxint2_delta1.0_zipf0.csv  tmp-a_dp_alg0_load10_batt2500_maxint2_delta1.0_zipf1.csv  tmp-a_dp_alg0_load10_batt2500_maxint2_delta1.0_zipf2.csv  tmp-a_dp_alg0_load10_batt2500_maxint4_delta0.5.csv  tmp-a_dp_alg0_load10_batt2500_maxint4_delta0.5_zipf0.csv  tmp-a_dp_alg0_load10_batt2500_maxint4_delta0.5_zipf1.csv  tmp-a_dp_alg0_load10_batt2500_maxint4_delta0.5_zipf2.csv  tmp-a_dp_alg0_load10_batt2500_maxint4_delta1.0.csv  tmp-a_dp_alg0_load10_batt2500_maxint4_delta1.0_zipf0.csv  (+905 more)
(+207 files in other folders)
